<resources>
    <string name="app_name">TV-J</string>
    <string name="edit">Edit</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="opts">Opts</string>
    <string name="m3u8">M3U8</string>
    <string name="add">ADD</string>
    <string name="mod">MOD</string>
    <string name="del">DEL</string>
    <string name="ok">OK</string>
    <string name="control">Volume control</string>
    <string name="player">Player</string>
    <string name="channels">Channels</string>
    <string name="import_export">Import/Export</string>
    <string name="rebuild_cache">Rebuild cache</string>
    <string name="clear_all">Clear all</string>
    <string name="channels_data">Channels data:</string>
    <string name="import_current">Import current data</string>
    <string name="export_file">Export data to file</string>
    <string name="quality">Quality:</string>
    <string name="mpd">MPD</string>
</resources>