<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/edit"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textSize="50sp"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="405dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:background="@android:color/darker_gray"
        android:choiceMode="singleChoice"
        android:scrollbarThumbVertical="@android:color/holo_green_light"
        />

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/number"
            android:hint="@string/number"
            android:autofillHints=""
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/name"
            android:hint="@string/name"
            android:autofillHints=""
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textUri"
            android:id="@+id/url"
            android:hint="@string/url"
            android:autofillHints=""
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/opts"
            android:hint="@string/opts"
            android:autofillHints=""
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btnAdd"
                android:layout_marginEnd="8dp"
                android:background="@drawable/list_item_selector"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod"
                android:id="@+id/btnMod"
                android:layout_marginEnd="8dp"
                android:background="@drawable/list_item_selector"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:id="@+id/btnDel"
                android:background="@drawable/list_item_selector"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/ok"
        android:id="@+id/btnOk"
        android:background="@drawable/list_item_selector"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginBottom="35dp"
        android:textSize="25sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>